add: column sale active
