# dto/venue.go
@@ -8,7 +8,6 @@ type VenueResponse struct {
 	Name      string     `json:"name"`
 	Country   string     `json:"country"`
 	City      string     `json:"city"`
-	IsActive  bool       `json:"is_active"`
 	Image     string     `json:"image"`
 	Capacity  int        `json:"capacity"`
 	CreatedAt time.Time  `json:"created_at"`
